--- a/index.html
+++ b/index.html
@@ -31,29 +31,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="covervid.min.js"></script>
 	<script src="assets/scripts/jquery.countdown.min.js"></script>
-	<script src="assets/scripts/scripts.js"></script>
-	
-
-	<!-- Call CoverVid -->
-	<script type="text/javascript">
-		// Video
-		coverVid(document.querySelector('.masthead-video'), 640, 360);
-		// Countdown
-		$(document).ready(function(){
-			var username = Math.random() > 0.9 ? 'jfkz' : 'salwadora';
-     		$('h1').html(username
-     			+ '<span id="clock">What Are You Waiting For?</span>');
- 			$(document).attr('title', username);
-			$('#clock').countdown('2017/03/09')
-				.on('update.countdown', function(event) {
-  					$(this).html(event.strftime('%D days %H:%M:%S remain'));
-				})
-	    		.on('finish.countdown', function(event) {
-	    			$('#clock').text('What Are You Waiting For?');
- 	    		});
-		});
-	</script>
-
+	<script src="assets/scripts/scripts.min.js"></script>
 </body>
 
 </html>
